--- a/index.html
+++ b/index.html
@@ -4,12 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no" />
 	<title>SMT导航</title>
-	<style>
-		#error li {
-			font-size: 22px;
-			margin: 10px 15px;
-		}
-	</style>
+	<link href="css/normalize.css" rel="stylesheet" type="text/css" />
 	<script src="js/jquery.min.js"></script>
 	<script>document.write("<script src='js/version.js?" + Math.random() + "'><" + "/script>");</script>
 	<script>document.write("<link id='css_main' href='css/main.css?" + ver + "' rel='stylesheet' type='text/css' />");</script>
@@ -23,17 +18,8 @@
 </head>
 
 <body>
-<div id="error" style="width:100%; height: 100%; z-index: 999; text-align:center;">
-	<div style="display:inline-block; text-align:left; padding: 20% 0;">
-		<span style="color:#6cf; font-weight:bold; font-size:42px;">网页无法正常显示，请尝试：</span>
-		<ul style="margin-top:30px;">
-			<li>IE用户请点击下方<span style="color:#F60;">“允许阻止的内容”</span>按钮</li>
-			<li>更换其他浏览器</li>
-		</ul>
-	</div>
-</div>
-
-<div id="cont_wrapper">
+<iframe id="error" src="error.html"></iframe>
+<div id="cont_wrapper" style="display:none;">
 	<script>
 		// JS正常加载时隐藏error、显示cont_wrapper
 		$("#error").css("display", "none");
